--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
       href="https://assets.nflxext.com/ffe/siteui/common/icons/nficon2016.ico"
     />
     <title>Netflick - Streaming Service</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    />
     <link rel="stylesheet" href="styles.css" />
 
     <!-- Search Bar -->
-    
-<div class="container">
-    <div class="input7">
-      <input type="checkbox" />
-      <div class="input7-container">
+
+    <div class="container">
+      <div class="input7">
+        <input type="checkbox" />
+        <div class="input7-container">
           <button>
-              <svg
-                  role="img"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 19.9 19.7"
-              >
-                  <g fill="none">
-                      <path stroke-linecap="square" d="M18.5 18.3l-5.4-5.4" />
-                      <circle cx="8" cy="8" r="7" />
-                  </g>
-              </svg>
+            <svg
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 19.9 19.7"
+            >
+              <g fill="none">
+                <path stroke-linecap="square" d="M18.5 18.3l-5.4-5.4" />
+                <circle cx="8" cy="8" r="7" />
+              </g>
+            </svg>
           </button>
           <input placeholder="Search.." type="text" />
+        </div>
       </div>
     </div>
-  </div>
-  
   </head>
   <body>
     <!-- Header Section -->
@@ -55,7 +58,6 @@
             <li><a href="#">TV Shows</a></li>
             <li><a href="#">Genre</a></li>
             <li><a href="#">My List</a></li>
-            
           </ul>
         </nav>
       </div>
