--- a/index.html
+++ b/index.html
@@ -7,52 +7,36 @@
       rel="shortcut icon"
       href="https://assets.nflxext.com/ffe/siteui/common/icons/nficon2016.ico"
     />
-    <title>Netflick - Streaming Service</title>
+    <title>TRAPFLIX - Streaming Service</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
     />
     <link rel="stylesheet" href="styles.css" />
 
-    <!-- Search Bar -->
-
-    <div class="container">
-      <div class="input7">
-        <input type="checkbox" />
-        <div class="input7-container">
-          <button>
-            <svg
-              role="img"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 19.9 19.7"
-            >
-              <g fill="none">
-                <path stroke-linecap="square" d="M18.5 18.3l-5.4-5.4" />
-                <circle cx="8" cy="8" r="7" />
-              </g>
-            </svg>
-          </button>
-          <input placeholder="Search.." type="text" />
-        </div>
-      </div>
-    </div>
+   
+    
   </head>
   <body>
     <!-- Header Section -->
     <header>
       <div class="navbar">
         <div class="text2">
-          <div>N</div>
-          <div>E</div>
           <div>T</div>
+          <div>r</div>
+          <div>a</div>
+          <div>p</div>
           <div>F</div>
-          <div>L</div>
-          <div>I</div>
-          <div>C</div>
-          <div>K</div>
+          <div>l</div>
+          <div>i</div>
+          <div>x</div>
         </div>
 
         <nav>
+            <!-- Add Sign Up and Login Buttons -->
+            <div class="auth-buttons">
+              <button id="loginBtn">Login</button>
+              <button id="signupBtn">Sign Up</button>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">TV Shows</a></li>
@@ -65,7 +49,7 @@
       <div class="featured">
         <h1>Watch Your Favorite Shows</h1>
         <p>Unlimited streaming, anytime, anywhere.</p>
-        <button>Play Now</button>
+        <button>SIGN UP</button>
       </div>
     </header>
 
@@ -104,36 +88,13 @@
         </div>
       </div>
     </section>
+    
+     <!-- JavaScript linked here -->
+     <script src="script.js"></script>
 
-    <div class="form9">
-      <h3>LogIn</h3>
-      <form action="">
-        <div class="inputBox">
-          <input id="form9-email" required type="text" />
-          <label for="form9-email">Email or Phone number</label>
-        </div>
-        <div class="inputBox">
-          <input id="form9-password" required type="password" />
-          <label for="form9-password">Password</label>
-        </div>
-        <button type="submit">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          LogIn
-        </button>
-      </form>
-      <p class="forgot-password">
-        Don't have an account?
-        <a href="/#">SignUp</a>
-      </p>
-    </div>
+   
 
-    <footer>
-      <p>&copy; 2025 Netflick By TRAPO. All rights reserved.</p>
-
-      <a class="member-footer-link" href="https://help.netflix.com/"></a>
+     <footer><p>&copy;2025 TrapFlix By TRAPO. All rights reserved.</p>
     </footer>
   </body>
 </html>
