--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
   </head>
   <body>
-    <!-- Header Section -->
+    <!-- MY Header Section -->
     <header>
       <div class="navbar">
         <div class="text2">
@@ -33,7 +33,7 @@
         </div>
 
         <nav>
-            <!-- Add Sign Up and Login Buttons -->
+            <!-- I Add Sign Up and Login Buttons -->
             <div class="auth-buttons">
               <button id="loginBtn">Login</button>
               <button id="signupBtn">Sign Up</button>
@@ -45,7 +45,7 @@
           </ul>
         </nav>
       </div>
-      <!-- Featured Content -->
+      <!-- My Featured Content -->
       <div class="featured">
         <h1>Watch Your Favorite Shows</h1>
         <p>Unlimited streaming, anytime, anywhere.</p>
@@ -89,7 +89,7 @@
       </div>
     </section>
     
-     <!-- JavaScript linked here -->
+     <!-- i added my JavaScript linked here -->
      <script src="script.js"></script>
 
    
