--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </header>
 
-    <!-- Content Section -->
+    <!-- My Content Section -->
 
     <section class="content">
       <h2>Trending Now</h2>
@@ -87,9 +87,11 @@
           <p>FROM</p>
         </div>
       </div>
+
+      
     </section>
     
-     <!-- i added my JavaScript linked here -->
+     <!-- i added my JavaScript linked here not sure if it's working -->
      <script src="script.js"></script>
 
    
